--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "afef-token-functions",
   "version": "1.0.0",
   "description": "Serverless functions for AFEF Token project.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "firebase-admin": "^12.1.1"
+    "firebase-admin": "^12.1.1",
+    "csv-parse": "^5.5.6",
+    "ethers": "^6.13.1"
   }
 }
+
